Bug 107018 - PDF export: pdf images mishandled with references in nested dictionaries
Summary: PDF export: pdf images mishandled with references in nested dictionaries
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-07 14:31 UTC by Miklos Vajna
Modified: 2017-04-07 21:09 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer document. (15.42 KB, application/vnd.oasis.opendocument.text)
2017-04-07 14:31 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2017-04-07 14:31:02 UTC
Created attachment 132398 [details]
Reproducer document.

See the attached document; it has a pdf image where object #5 has a nested /Foo -> /Bar dictionary key with a reference. When copying that to the pdf export result, we copy that reference as-is, so the output becomes invalid.
Comment 1 Commit Notification 2017-04-07 21:09:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ee73747ab58fbbd5039823767693431223c347d3

tdf#107018 PDF export of PDF images: handle references in nested dictionaries

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.